k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betting-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: betting-api
  template:
    metadata:
      labels:
        app: betting-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: betting-api
          image: ghcr.io/thranox/betting-api:106efb260704e68e72dae7c03ddc8dfab1c715e1
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
